Fix deploy + ingress

--- a/charts/tinyapp/templates/deployment.yaml
+++ b/charts/tinyapp/templates/deployment.yaml
@@ -23,9 +23,12 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: PORT
+              value: "{{ .Values.service.internalPort }}"
           ports:
             - name: http
-              containerPort: 80
+              containerPort: {{ .Values.service.internalPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
